@@ -19,7 +19,12 @@ public class keyword implements Comparable<keyword> {
     /**
      * hit count
      */
-    public int cnt;
+    public long cnt;
+
+    /**
+     * byte count
+     */
+    public long byt;
 
     /**
      * last time
@@ -63,6 +68,7 @@ public class keyword implements Comparable<keyword> {
             m = o;
         }
         m.cnt++;
+        m.byt += a.length();
         m.lst = bits.getTime();
     }
 
@@ -76,13 +82,13 @@ public class keyword implements Comparable<keyword> {
         if (l == null) {
             return null;
         }
-        userFormat r = new userFormat("|", "message|count|last|ago");
+        userFormat r = new userFormat("|", "message|count|byte|last|ago");
         for (int i = 0; i < l.size(); i++) {
             keyword k = l.get(i);
             if (k == null) {
                 continue;
             }
-            r.add(k.msg + "|" + k.cnt + "|" + bits.time2str(cfgAll.timeZoneName, k.lst + cfgAll.timeServerOffset, 3) + "|" + bits.timePast(k.lst));
+            r.add(k.msg + "|" + k.cnt + "|" + k.byt + "|" + bits.time2str(cfgAll.timeZoneName, k.lst + cfgAll.timeServerOffset, 3) + "|" + bits.timePast(k.lst));
         }
         return r;
     }
@@ -101,7 +107,7 @@ public class keyword implements Comparable<keyword> {
         if (t == null) {
             return null;
         }
-        userFormat l = new userFormat("|", "message|rx|tx|rx|tx|rx|tx", "1|2counts|2last|2ago");
+        userFormat l = new userFormat("|", "message|rx|tx|rx|tx|rx|tx|rx|tx", "1|2count|2byte|2last|2ago");
         for (int i = 0; i < r.size(); i++) {
             keyword k = r.get(i);
             if (k == null) {
@@ -110,7 +116,7 @@ public class keyword implements Comparable<keyword> {
             if (t.find(k) != null) {
                 continue;
             }
-            l.add(k.msg + "|" + k.cnt + "|0|" + bits.time2str(cfgAll.timeZoneName, k.lst + cfgAll.timeServerOffset, 3) + "|-|" + bits.timePast(k.lst) + "|-");
+            l.add(k.msg + "|" + k.cnt + "|0|" + k.byt + "|0|" + bits.time2str(cfgAll.timeZoneName, k.lst + cfgAll.timeServerOffset, 3) + "|-|" + bits.timePast(k.lst) + "|-");
         }
         for (int i = 0; i < t.size(); i++) {
             keyword k = t.get(i);
@@ -120,7 +126,7 @@ public class keyword implements Comparable<keyword> {
             if (r.find(k) != null) {
                 continue;
             }
-            l.add(k.msg + "|0|" + k.cnt + "|-|" + bits.time2str(cfgAll.timeZoneName, k.lst + cfgAll.timeServerOffset, 3) + "|-|" + bits.timePast(k.lst));
+            l.add(k.msg + "|0|" + k.cnt + "|0|" + k.byt + "|-|" + bits.time2str(cfgAll.timeZoneName, k.lst + cfgAll.timeServerOffset, 3) + "|-|" + bits.timePast(k.lst));
         }
         for (int i = 0; i < t.size(); i++) {
             keyword k = t.get(i);
@@ -131,7 +137,7 @@ public class keyword implements Comparable<keyword> {
             if (p == null) {
                 continue;
             }
-            l.add(k.msg + "|" + p.cnt + "|" + k.cnt + "|" + bits.time2str(cfgAll.timeZoneName, p.lst + cfgAll.timeServerOffset, 3) + "|" + bits.time2str(cfgAll.timeZoneName, k.lst + cfgAll.timeServerOffset, 3) + "|" + bits.timePast(p.lst) + "|" + bits.timePast(k.lst));
+            l.add(k.msg + "|" + p.cnt + "|" + k.cnt + "|" + p.byt + "|" + k.byt + "|" + bits.time2str(cfgAll.timeZoneName, p.lst + cfgAll.timeServerOffset, 3) + "|" + bits.time2str(cfgAll.timeZoneName, k.lst + cfgAll.timeServerOffset, 3) + "|" + bits.timePast(p.lst) + "|" + bits.timePast(k.lst));
         }
         return l;
     }
