@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v25.9.10-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2025-09-10 05:35:31, took 00:19:19, with 50 workers, on 4038 cases, 1 failed, 0 traces, 9 retries<br/>
+tested: 2025-09-10 06:47:08, took 00:14:05, with 50 workers, on 4038 cases, 0 failed, 0 traces, 2 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1072,7 +1072,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-tls07.tst">crypt-tls07.tst</a></td><td>success</td><td>tls with rsa</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-tls08.tst">crypt-tls08.tst</a></td><td>success</td><td>tls with ecdsa</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-tls09.tst">crypt-tls09.tst</a></td><td>success</td><td>tls with mldsa</td></tr>
-<tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard01.tst">crypt-wireguard01.tst</a></td><td>#6-run-r1 tping 100 10 2.2.2.2 vrf v1</td><td>wireguard over ipv4</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard01.tst">crypt-wireguard01.tst</a></td><td>success</td><td>wireguard over ipv4</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard02.tst">crypt-wireguard02.tst</a></td><td>success</td><td>wireguard over ipv6</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard03.tst">crypt-wireguard03.tst</a></td><td>success</td><td>wireguard over wireguard</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/crypt-wireguard04.tst">crypt-wireguard04.tst</a></td><td>success</td><td>wireguard over loopback</td></tr>
